--- a/Application/menu.html
+++ b/Application/menu.html
@@ -8,7 +8,7 @@
     <body>
     <div>
         
-        <h1>WattApp</h1>
+        <h1>Application</h1>
         </div>
         
         <div align="center"><a href="session.php"><h2>Results</h2></a></div>
